kubernetes/nodejs/nodejs-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nodejs-service-ingress
  namespace: my-restaurant
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /catalog
        backend:
          serviceName: nodejs-service-svc
          servicePort: 15778
